@@ -7,8 +7,8 @@ extern "C" int printf(const char *, ...);
 
 struct S
 {
-  static const float inf = 1.0f / 0.0f; // { dg-warning "1.0|initialization" }
-  static const float nan = 0.0f / 0.0f; // { dg-warning "0.0|initialization" }
+  static const float inf = 1.0f / 0.0f; // { dg-warning "1.0|initializ" }
+  static const float nan = 0.0f / 0.0f; // { dg-warning "0.0|initializ" }
 };
 
 int main()
